--- a/TranThiMai_33/Views/Shared/_Layout.cshtml
+++ b/TranThiMai_33/Views/Shared/_Layout.cshtml
@@ -23,6 +23,10 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Lớp Học", "Index", "LopHocs")</li>
+                    <li>@Html.ActionLink("Sinh Viên", "Index", "SinhViens")</li>
+                    <li>@Html.ActionLink("Đăng nhập", "Login", "CheckAccounts")</li>
+                    <li>@Html.ActionLink("Đăng xuất", "Logoff", "CheckAccounts")</li>
                 </ul>
             </div>
         </div>
