--- a/TranThiMai_33/Views/SinhViens/Create.cshtml
+++ b/TranThiMai_33/Views/SinhViens/Create.cshtml
@@ -6,12 +6,18 @@
 }
 
 <h2>Create</h2>
+@using (Html.BeginForm("UploadFile", "SinhViens", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    <div>
+        @Html.TextBox("file", "", new { type = "file" }) <br />
+        <input type="submit" value="Upload" />
+    </div>
+}
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>SinhVien</h4>
         <hr />
