--- a/TranThiMai_33/Views/LopHocs/Index.cshtml
+++ b/TranThiMai_33/Views/LopHocs/Index.cshtml
@@ -13,22 +13,28 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.MaLop)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.TenLop)
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.TenLop)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.MaLop }) |
-            @Html.ActionLink("Details", "Details", new { id=item.MaLop }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.MaLop })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.MaLop)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.TenLop)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.MaLop }) |
+        @Html.ActionLink("Details", "Details", new { id = item.MaLop }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.MaLop })
+    </td>
+</tr>
 }
 
 </table>
